Potential fix for footer on mobile

--- a/index.css
+++ b/index.css
@@ -1,3 +1,8 @@
+.main-container {
+	position:relative;
+	height: 100%;
+	padding-bottom: 15%;
+}
 .navigation {
 	background-color: darkgrey;
 	width: 100%;
@@ -33,8 +38,8 @@
 
 .footer {
 	width: 100%;
-	/*position: absolute;
-	bottom: 0px;*/
+	position: absolute;
+	bottom: 0;
 }
 
 .bottom-graphic {
@@ -50,16 +55,8 @@ body {
 	display: flex;
 	flex-direction: column;
 	margin: 0;
-	overflow-x: hidden;
 	min-height: 100%;
 	height: auto;
 	text-align: center;
-}
-
-html {
 	position: relative;
-	min-height: 100%;
-	height: 100%;
-	overflow-x: hidden;
-	overflow-y: scroll;
 }
